<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="name_title">Judul Film</string>
    <string name="description">Ini Deskripsi</string>
    <string name="rating">Rating</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>

    <string-array name="data_title">
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>The Girl in the Spider\'s Web</item>
        <item>Venom</item>
    </string-array>

    <string-array name="data_description">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder &amp; zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>After three years, the business of Muslihat (Epi Kusnandar), who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira (Safira Maharani), her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <string-array name="data_release">
        <item>April 25, 2018</item>
        <item>December 13, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>October 19, 2018</item>
        <item>December 13, 2018</item>
        <item>January 17, 2019</item>
        <item>November 21, 2018</item>
        <item>October 25, 2018</item>
        <item>September 28, 2018</item>
    </string-array>

    <integer-array name="data_rating">
        <item>83</item>
        <item>70</item>
        <item>69</item>
        <item>77</item>
        <item>74</item>
        <item>63</item>
        <item>66</item>
        <item>65</item>
        <item>58</item>
        <item>60</item>
        <item>66</item>
    </integer-array>

    <array name="data_photo">
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_venom</item>
    </array>
</resources>
