<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    
    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/name_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/img_photo"
        android:textColor="@android:color/white"
        android:text="@string/rating"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/txt_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txt_rating"
        android:textColor="@android:color/white"
        android:text="@string/release"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_rating"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="5"
        android:justificationMode="inter_word"
        android:text="@string/description"/>

</RelativeLayout>
